= master

* Add support for :unsupported_matcher => :raise option, for raising on unsupported matcher values (jeremyevans)

* Add support for :unsupported_block_result => :raise option, for raising on unsupported route/match block return values (jeremyevans)

= 2.21.0 (2016-12-16)

* Add handle_stream_error method to streaming plugin, for handling errors when using stream(:loop=>true) (jeremyevans)

= 2.20.0 (2016-11-13)

* Support :escape=>:erubi option in the render plugin to use the erubi template engine (jeremyevans)

= 2.19.0 (2016-10-14)

* Don't add Content-Type/Content-Length headers for 1xx, 204, 205, 304 statuses (celsworth, jeremyevans) (#101, #102)

* Optimize indifferent_params plugin when using Rack 2 (jeremyevans)

* Fix assets_paths method in assets plugin when subresource integrity is used (jeremyevans, celsworth)

* Make assets plugin depend on h plugin, instead of using Rack::Utils.escape_html (jeremyevans)

* Make h plugin not escape / (celsworth, jeremyevans) (#100)

= 2.18.0 (2016-09-13)

* Add assets_preloading plugin, for creating link tags or Link header for preloading assets (celsworth, jeremyevans) (#98)

* Add assets_paths method to assets plugin, for just the paths to the assets, instead of the full tags (celsworth) (#96)

* Make type_routing plugin work correctly with public plugin (celsworth, jeremyevans) (#95)

* Add static_routing plugin for 3-4x increase in performance for large numbers of static routes (jeremyevans)

* Make head plugin work with not_allowed plugin if loaded after (jeremyevans) (#92)

= 2.17.0 (2016-08-13)

* Add :postprocessor option to assets plugin, for postprocessing assets (e.g. autoprefixing CSS) (celsworth) (#86)

* Fix path passed to rack apps when using r.run and the type_routing plugin (jeremyevans) (#82)

* Support :classes option to error_handler plugin for overriding which exception classes to rescue (jeremyevans)
