@@ -145,7 +145,7 @@ describe "mailer plugin" do
 
   it "supports regular web requests in same application" do
     app(:mailer) do |r|
-      r.get "foo/:bar" do |bar|
+      r.get "foo", :bar do |bar|
         "foo#{bar}"
       end
       r.mail "bar" do
