@@ -11,25 +11,28 @@ describe "optimized_string_matchers plugin" do
         "ee"
       end
 
-      r.on_branch "a/:b" do |*b|
-        r.is_exactly ":c" do |*c|
-          "c-#{c.length}"
+      r.on_branch "a" do
+        r.on_branch "b" do
+          r.is_exactly "c" do
+            "c"
+          end
+
+          "b"
         end
 
-        "a-#{b.length}"
+        "a"
       end
 
       "cc"
     end
 
     body.must_equal 'cc'
-    body('/a').must_equal 'cc'
-    body('/a/').must_equal 'cc'
-    body('/a/b/').must_equal 'a-0'
-    body('/a/b/').must_equal 'a-0'
-    body('/a/b/c').must_equal 'c-0'
-    body('/a/b/c/').must_equal 'a-0'
-    body('/a/b/c/d').must_equal 'a-0'
+    body('/a').must_equal 'a'
+    body('/a/').must_equal 'a'
+    body('/a/b/').must_equal 'b'
+    body('/a/b/c').must_equal 'c'
+    body('/a/b/c/').must_equal 'b'
+    body('/a/b/c/d').must_equal 'b'
     body('/e').must_equal 'ee'
     body('/eb').must_equal 'cc'
     body('/e/').must_equal 'ee'
